[metadata]
name = DyGraph
description = A package for estimating dynamic graphical lasso with heavy tailed distributions
long_description = file: README.md
long_description_content_type = text/markdown
author = ragnarlevi
version=0.0.1
license = MIT
license_file = LICENSE
url=https://github.com/ragnarlevi/DyGraph
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/ragnarlevi/DyGraph/issues

[options]
packages =
    DyGraph
install_requires =
    scipy>=1.6.1
    numpy>=1.20.1
    tqdm>=4.65.0
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.3.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
slapping = py.typed